--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strongswan-vici",
-  "version": "1.1.1",
+  "version": "1.1.1-hola.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "types/index.d.ts",
